@@ -8,6 +8,8 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
   Fixed alteration of $! during profiling thanks to Slaven Rezic.
 
+  Added some docs to Devel::NYTProf::Apache
+
 =head2 Changes in Devel::NYTProf 2.04 (svn r483) 1st Oct 2008
 
   Fixed rare divide-by-zero error in reporting code.
